src/serve/tests/requests/select/relationships/snapshots/basiliq__serve__tests__requests__select__relationships__sort__sort_remote_single.snap
---
source: basiliq/src/serve/tests/requests/select/relationships/sort.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804"
    }
  ]
}
