src/serve/tests/requests/select/relationships/snapshots/basiliq__serve__tests__requests__select__relationships__sort__sort_remote_single_multi.snap
---
source: basiliq/src/serve/tests/requests/select/relationships/sort.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f"
    }
  ]
}
